# track_drawer

./: .gitignore  Cargo.toml  README.md  index.html  tailwind.config.js
public/: tailwind.css
src/: drawing.rs  icons.rs  main.rs  page.rs  storage.rs  utils.rs
src/page/: draw.rs  view.rs
