[package]
name = "track-drawer"
version = "0.1.0"
authors = ["Oliver Downard <omdownard@outlook.com>"]
edition = "2018"

[dependencies]
seed = "0.8.0"
wasm-bindgen = "0.2.70"
rand = "0.8.3"

[dependencies.web-sys]
version = "0.3.47"
features = ["XmlSerializer", "Blob", "BlobPropertyBag", "Element", "Document", "Event", "EventTarget"]

